--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.offcanvas-menu {
+  left: -100%;
+  transition: 0.7s;
+}
+
+.offcanvas-menu.menu-active {
+  left: 0;
+}
